--- a/style.css
+++ b/style.css
@@ -511,9 +511,8 @@ input:valid ~ label{
 
 /* Map Page */
 .scary{
-    position: absolute;
-    width: auto;
-    height: 100%;
+    width: 100%;
+    max-width: 1500px;
 }
 /* Map Page */
 
