--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
 body{
     width: 100%;
     overflow-x: hidden;
-    background: linear-gradient(to bottom, var(--color3) 60%, lightGray 40%);
 }
 
 html::-webkit-scrollbar{
@@ -113,179 +112,6 @@ header{
 }
 /* Header End */
 
-/*Login Start*/
-.giris{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    width: 100%;
-    background: url(img/İskenderiyeFeneri.jpg) no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-
-.form-box{
-    position: relative;
-    width: 400px;
-    height: 450px;
-    background: transparent;
-    border: 2px solid rgba(255,2555,255,0.5);
-    border-radius: 20px;
-    backdrop-filter: blur(10px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-}
-
-h2{
-    font-size: 2em;
-    color: var(--whiteColor);
-    text-align: center;
-}
-
-.input{
-    position: relative;
-    margin: 30px 0;
-    width: 310px;
-    border-bottom: 2px solid var(--whiteColor);
-}
-
-.input label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
-    color: var(--whiteColor);
-    font-size: 1em;
-    pointer-events: none;
-    transition: .5s;
-}   
-
-input:focus ~ label,
-input:valid ~ label{
-    top: -5px;
-}
-
-.input input{
-    width: 100%;
-    height: 50px;
-    background: transparent;
-    border: none;
-    outline: none;
-    font-size: 1em;
-    padding:0 35px 0 5px;
-    color: var(--whiteColor);
-}
-
-.input ion-icon{
-    position: absolute;
-    right: 8px;
-    color: var(--whiteColor);
-    font-size: 1.2em;
-    top: 20px;
-}
-
-.input i{
-    position: absolute;
-    right: 8px;
-    color: var(--whiteColor);
-    font-size: 1.2em;
-    top: 20px;
-}
-
-.forget{
-    margin: -15px 0 15px;
-    font-size: .9em;
-    color: var(--whiteColor);
-    display: flex;
-    justify-content: center;
-}
-
-.forget label input{
-    margin-right: 3px;
-}
-
-.forget label a{
-    color: var(--whiteColor);
-    text-decoration: none;
-}
-
-.forget label a:hover{
-    text-decoration: underline;
-}
-
-.buton{
-    display: flex;
-}
-
-.giris button{
-    color: var(--color1);
-    width: 100%;
-    height: 40px;
-    border-radius: 40px;
-    background: var(--whiteColor);
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-size: 1em;
-    font-weight: 600;
-    margin: 5px;
-}
-
-#signUp{
-    color: var(--color3);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 40px;
-    border-radius: 40px;
-    background: var(--whiteColor);
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-size: 1em;
-    font-weight: 600;
-    margin: 5px;
-}
-
-#login{
-    color: var(--color3);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 40px;
-    border-radius: 40px;
-    background: var(--whiteColor);
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-size: 1em;
-    font-weight: 600;
-    margin: 5px;
-}
-
-.kayıtOl{
-    font-size: .9em;
-    color: var(--whiteColor);
-    text-align: center;
-    margin: 25px 0 10px;
-}
-
-.kayıtOl p a{
-    text-decoration: none;
-    color: var(--whiteColor);
-    font-weight: 600;
-}
-
-.kayıtOl p a:hover{
-    text-decoration: underline;
-}
-/*Login End*/
-
 /*Contact Start*/
 .contact{
     width: 100%;
@@ -354,6 +180,7 @@ input:valid ~ label{
 
 .contact-left2 a{
     color: var(--whiteColor);
+    border: 1px solid var(--whiteColor);
     width: 3rem;
     height: 3rem;
     line-height: 3rem;
@@ -442,7 +269,7 @@ input:valid ~ label{
 .World .content h1{
   margin: 0;
   padding: 0;
-  font-size: 7em;
+  font-size: 5.5em;
   text-transform: uppercase;
   color: var(--whiteColor);
   font-family: 'Wallpoet', cursive;
@@ -454,12 +281,12 @@ input:valid ~ label{
 }
 /*Background*/
 
-/*First İntro*/
+/*Map İntroduction*/
 .İntros{
     width: 100%;
     margin: auto;
-    padding: 20px;
     margin-top: -5px;
+    padding: 20px;
     background-color: var(--color2);
 }
 
@@ -477,18 +304,23 @@ input:valid ~ label{
     margin-left:10px;
    border: 2px solid var(--whiteColor);
    border-radius: 20px;
-   width: 55%;
+   width: 50%;
    height: auto;
 }
 
 .p-button{
-    display: grid;
-    justify-content: center;
-    align-content: center;
+    display: block;
+    margin: auto;
+    width: 50%;
 }
 
 .p-button p{
     font-size: 20px;
+}
+.btn{
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
 .btn a{
@@ -496,7 +328,6 @@ input:valid ~ label{
     justify-content: center;
     align-content: center;
     margin-top: 50px;
-    margin-right: 50px;
     color: var(--color1);
     font-size: 35px;
     font-family:  'Wallpoet', cursive; 
@@ -504,13 +335,13 @@ input:valid ~ label{
     padding:0.4em 110px;
     border-radius: 30px;
 }
-/*First İntro*/
+/*Map İntroduction*/
 
 /* Map Page */
 .container{
     background-color: var(--color2);
-    padding: 15px;
-    max-width: 1500px;
+    padding: 5px;
+   width: 100%;
 }
 
 .img-container{
@@ -618,6 +449,66 @@ input:valid ~ label{
 }
 /* Map Page */
 
+/* Ulke Page */
+.mainContainer{
+    background-color: #1b1b1b;
+}
+.ulke{
+    display: block;
+}
+
+.ulke p{
+    color: white;
+}
+
+.ulke h2{
+    color: var(--color4);
+    padding-left: 15px;
+}
+
+#title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    color: var(--color4);
+}
+
+.ulke-bilgi{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+#imgs{
+    width: 40%;
+    height: auto;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.bilgi{
+    width: 60%;
+    display: block;
+}
+
+#img1 ,#img2,#img3,#img4,#img5{
+    width: 35%;
+    height: auto;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.gezilecek-bilgi{
+    color: #146C94;
+}
+
+.yemek-bilgi{
+    color: #146C94;
+}
+/* Ulke Page */
+
 /*Fotter Start*/
 footer{
     bottom: 0;
@@ -722,7 +613,7 @@ footer.ftr-bottom p a{
 @media (max-width:1050px) {
     .intro{
         width: 100%;
-        display: grid;
+        display: block;
         justify-content: center;
         align-items: center;
       
@@ -732,6 +623,9 @@ footer.ftr-bottom p a{
         width: 100%;
         height: auto;
         margin-top: 20px;
+    }
+    .p-button p{
+        font-size: 15px;
     }
 }
 
@@ -797,8 +691,6 @@ footer.ftr-bottom p a{
         margin: 16px 0;
     }
 
-    
-
     .nav-menu.active{
         left: 0;
     }
@@ -816,6 +708,13 @@ footer.ftr-bottom p a{
     .ftr-menu ul li{
         padding: 10px;
     }
-  
+
+    .World{
+        margin-top: -30px;
+    }
+
+    .İntros{
+        margin-top: -30px;
+    }
 }
 /* Responsive End */
