--- a/style.css
+++ b/style.css
@@ -250,6 +250,7 @@ header{
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--color1);
 }
 .World video{
   position: absolute;
@@ -257,7 +258,6 @@ header{
   width: 100%;
   height: 100%;
   pointer-events: none;
-  overflow: hidden;
 }
 .World .content{
   position: relative;
@@ -316,11 +316,6 @@ header{
 
 .p-button p{
     font-size: 20px;
-}
-.btn{
-    display: flex;
-    justify-content: center;
-    align-content: center;
 }
 
 .btn a{
@@ -616,7 +611,6 @@ footer.ftr-bottom p a{
         display: block;
         justify-content: center;
         align-items: center;
-      
     }
 
     .İntros img{
@@ -624,6 +618,11 @@ footer.ftr-bottom p a{
         height: auto;
         margin-top: 20px;
     }
+
+    .p-button{
+        width: 100%;
+    }
+
     .p-button p{
         font-size: 15px;
     }
@@ -708,13 +707,15 @@ footer.ftr-bottom p a{
     .ftr-menu ul li{
         padding: 10px;
     }
-
-    .World{
+    
+    .İntros{
         margin-top: -30px;
     }
 
-    .İntros{
-        margin-top: -30px;
+    .btn{
+        display: flex;
+        justify-content: center;
+        align-content: center;
     }
 }
 /* Responsive End */
