--- a/style.css
+++ b/style.css
@@ -242,6 +242,24 @@ header{
 }
 /*Contact End*/
 
+/* About */
+.boxs{
+    padding: 30px;
+}
+
+.box1{
+    padding: 10px;
+    margin: 10px;
+    height: auto;
+    border: 2px solid rgba(255,2555,255,0.5);
+}
+
+.box1 h1{
+    text-align: center;
+    color: var(--color4);
+}
+/* About */
+
 /*Background*/
 .World{
     overflow: hidden;
