--- a/style.css
+++ b/style.css
@@ -252,14 +252,12 @@ header{
     overflow: hidden;
     background-position: center;
     background-size: cover;
-    color:#eeeeee;
+    color:var(--whiteColor);
     padding: 3rem;
-   
-
 }
+
 .boxs{
     padding: 30px;
-   
 }
 
 .box1{
@@ -269,9 +267,6 @@ header{
     border: 2px solid rgba(255,2555,255,0.5); 
   backdrop-filter:invert(20%);
     border-radius: 20px;
-    
- 
-  
 }
 
 
@@ -280,12 +275,8 @@ header{
     color: var(--color4);
     font-family:'Wallpoet', cursive;
     font-size: 30px;
-     background-color: #ededed;
-     
-     border-radius: 50px;
-    
-    
-     
+    background-color: var(--whiteColor);
+    border-radius: 50px;   
 }
 /* About */
 
@@ -503,8 +494,9 @@ header{
     height: 500px;
     border-radius: 10px;
     display: block;
-  margin-left: auto;
-  margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
+    transition: all 0.3s ease-in-out;
 }
 
 .bilgi{
@@ -776,10 +768,6 @@ footer.ftr-bottom p a{
         width: 10px;
         height: 10px;   
     }
-
-    #imgs{
-        height: 350px;
-    }
 }
 
 @media (max-width:576px) {
@@ -804,10 +792,6 @@ footer.ftr-bottom p a{
         display: flex;
         justify-content: center;
         align-content: center;
-    }
-
-    #imgs{
-        height: 300px;
     }
 
     #kaybol{
