--- a/style.css
+++ b/style.css
@@ -362,7 +362,7 @@ header{
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top: 50px;
+    margin-top: 15px;
     color: var(--color1);
     font-size: 35px;
     font-family:  'Wallpoet', cursive; 
@@ -543,6 +543,25 @@ header{
     font-size: 2rem;
 }
 /* Ulke Page */
+
+/* 3D Map */
+.Earth{
+    z-index: 9999;
+    font-size: 30px;
+    margin: 45px;
+    text-align: center;
+}
+
+.Earth h1{
+    color: var(--whiteColor);
+    font-size: 80px;
+    font-family: 'Wallpoet', cursive;
+}
+
+.Earth p{
+    color: var(--color3);
+}
+/* 3D Map */
 
 /*Fotter Start*/
 footer{
